// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Collapse Display tests should display childrens correctly 1`] = `
<div>
  <div
    class="collapse"
  >
    <div
      class="content"
      style="height: 0px;"
    >
      <div>
        <p
          style="margin: 0px 0px 16px 0px;"
        >
          Банк, основанный в 1990 году, является универсальным банком, осуществляющим все основные виды банковских операций, представленных на рынке финансовых услуг, включая обслуживание частных и корпоративных клиентов, инвестиционный банковский бизнес, торговое финансирование и т.д.
        </p>
        <p
          style="margin: 0px 0px 16px 0px;"
        >
          Банк, основанный в 1990 году, является универсальным банком, осуществляющим все основные виды банковских операций, представленных на рынке финансовых услуг, включая обслуживание частных и корпоративных клиентов, инвестиционный банковский бизнес, торговое финансирование и т.д.
        </p>
      </div>
    </div>
    <button
      class="component primary pseudo withAddons"
      type="button"
    >
      <span>
        <span
          class="text"
        >
          Показать
        </span>
      </span>
      <span
        class="addons"
      >
        <svg
          class="toggleIcon"
          fill="currentColor"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 8.938L3.875 4.811 2.75 5.938C5.093 8.428 8 11.188 8 11.188s2.907-2.76 5.25-5.25l-1.125-1.125L8 8.938z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Collapse Display tests should display one child correctly 1`] = `
<div>
  <div
    class="collapse"
  >
    <div
      class="content"
      style="height: 0px;"
    >
      <div>
        test text
      </div>
    </div>
    <button
      class="component primary pseudo withAddons"
      type="button"
    >
      <span>
        <span
          class="text"
        >
          Показать
        </span>
      </span>
      <span
        class="addons"
      >
        <svg
          class="toggleIcon"
          fill="currentColor"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 8.938L3.875 4.811 2.75 5.938C5.093 8.428 8 11.188 8 11.188s2.907-2.76 5.25-5.25l-1.125-1.125L8 8.938z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
